--- a/index.css
+++ b/index.css
@@ -343,7 +343,7 @@ border-radius: 30px;
 
 #b3p1{
     position: absolute;
-    width: 304px;
+/*     width: 304px; */
     height: 59px;
     left: 25px;
     top: 170px;
